# fnemon

./: README.md  pyproject.toml
configs/services/: fnemon.service
fnemon/: fnemon.py
